<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/accion_configuracion"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:visible="true"
        android:title="@string/accion_configuracion" />

    <item
        android:id="@+id/accion_actualizar"
        android:icon="@drawable/ic_sync_white_24dp"
        android:visible="true"
        android:title="@string/accion_actualizar"
        app:showAsAction="always" />

    <item
        android:id="@+id/accion_cerrarsesion"
        android:title="@string/accion_cerrarsesion"
        android:visible="true"
        app:showAsAction="never"
        android:orderInCategory="50"/>

</menu>