<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:elevation="@dimen/elevation_appbar"
            android:layout_height="?attr/actionBarSize"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/registrar_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_registro_container"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:src="@mipmap/ic_logotipo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/id_til_nombres_registrar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TxtNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtNombres"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/id_til_apellidos_registrar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TxtApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtApellidos"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/id_til_telefono_registrar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TxtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtTelefono"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/id_til_mail_registrar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TxtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtEmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/id_til_pass_registrar"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->

            <Button
                android:id="@+id/BtnRegistrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@color/colorAccentLigth"
                android:text="@string/BtnRegistrar"
                android:textColor="@android:color/white" />
            <!--
                        <Button
                            android:id="@+id/btn_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:text="@string/titulo_regresar"
                            android:textColor="@color/colorAccent" />
            -->
        </LinearLayout>

    </ScrollView>
</LinearLayout>


</android.support.design.widget.CoordinatorLayout>

