<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.feedhenry.armark.Loggin">

    <!-- Login progress android:src="@drawable/img_login"-->
    <ImageView
        android:id="@+id/imv_login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/imv_login_logo"
        android:src="@drawable/img_login"
         />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/id_til_usuario_login"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/TxtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="270dp"
                    android:gravity="center_horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="162dp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:maxLines="1"
                    android:hint="Correo"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/id_til_pass_login"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/TxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="270dp"
                    android:gravity="center_horizontal"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:maxLines="1"
                    android:hint="Contraseña"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:width="220dp"
                android:background="#2ca8db"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:text="@string/text_btn_login"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:width="220dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tag_login_recordar_contrasena"
                    android:onClick="RecordarContraseña"/>

                <TextView
                    android:id="@+id/txt_login_registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:gravity="center_horizontal"
                    android:text="@string/tag_login_registrarse"
                    android:typeface="normal"
                    android:onClick="RegistrarUsuario"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>

